Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -141,6 +141,12 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/encryption</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/more-page-actions</li>
+
 <li>$:/config/Plugins/Disabled/$:/plugins/gsd5/core</li>
 
 <li>$:/core</li>
@@ -165,6 +171,10 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/tab--1963855381</li>
+
+<li>$:/state/tab--2112689675</li>
+
 <li>$:/state/tab--86143343</li>
 
 <li>$:/state/tab-1749438307</li>
@@ -174,6 +184,8 @@ Error message and password prompt
 <li>$:/state/tab/moresidebar-1850697562</li>
 
 <li>$:/state/tab/sidebar--595412856</li>
+
+<li>$:/state/tabs/controlpanel/toolbars-1345989671</li>
 
 <li>$:/StoryList</li>
 
@@ -371,11 +383,15 @@ Error message and password prompt
 
 <li>$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary</li>
 
+<li>$:/temp/search</li>
+
 <li>$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.21/index.html</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
+
+<li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
 
 <li>Home</li>
 
@@ -389,6 +405,15 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20200227111920333" modified="20200227111920333" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/encryption">
+<pre>show</pre>
+</div>
+<div created="20200227111905327" modified="20200227111905327" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home">
+<pre>show</pre>
+</div>
+<div created="20200227111912536" modified="20200227111912536" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/more-page-actions">
+<pre>show</pre>
+</div>
 <div created="20200227111114369" modified="20200227111114369" title="$:/config/Plugins/Disabled/$:/plugins/gsd5/core">
 <pre>yes</pre>
 </div>
@@ -10217,11 +10242,17 @@ Error message and password prompt
 <div created="20200227111624282" modified="20200227111631615" title="$:/SiteTitle">
 <pre>My Notebook</pre>
 </div>
-<div created="20200227104842323" modified="20200227104843392" title="$:/state/tab--86143343">
-<pre>$:/core/ui/ControlPanel/Plugins/Installed/Languages</pre>
+<div created="20200227111900038" modified="20200227111922278" title="$:/state/tab--1963855381">
+<pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
-<div created="20200227104113836" modified="20200227104846935" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20200227111832364" modified="20200227111834296" title="$:/state/tab--2112689675">
+<pre>$:/core/ui/ControlPanel/Basics</pre>
+</div>
+<div created="20200227104842323" modified="20200227111850418" title="$:/state/tab--86143343">
+<pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
+</div>
+<div created="20200227104113836" modified="20200227111857889" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
 <div created="20200227104118528" modified="20200227104756527" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -10232,7 +10263,10 @@ Error message and password prompt
 <div created="20200227111106909" modified="20200227111720013" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div list="Home" title="$:/StoryList">
+<div created="20200227111902703" modified="20200227111902703" title="$:/state/tabs/controlpanel/toolbars-1345989671">
+<pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
+</div>
+<div created="20200227111736820" list="Home" modified="20200227111826952" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11052,6 +11086,9 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200227104806773" modified="20200227104815740" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>git</pre>
 </div>
+<div created="20200227111742592" modified="20200227111749196" title="$:/temp/search">
+<pre></pre>
+</div>
 <div created="20200227104804053" modified="20200227104804053" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.21/index.html" url="https://tiddlywiki.com/library/v5.1.21/index.html">
 <pre>loaded</pre>
 </div>
@@ -11163,6 +11200,9 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
         }
     }
 }</pre>
+</div>
+<div created="20200227111937413" modified="20200227111937413" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
+<pre>fluid-fixed</pre>
 </div>
 <div created="20200227111723954" modified="20200227111730813" tags="" title="Home">
 <pre></pre>
