Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -171,6 +171,8 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/sidebar</li>
+
 <li>$:/state/tab--1963855381</li>
 
 <li>$:/state/tab--2112689675</li>
@@ -392,6 +394,8 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/vanilla</li>
 
 <li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
+
+<li>Coronavirus COVID-19 Global Cases</li>
 
 <li>Home</li>
 
@@ -10242,6 +10246,9 @@ Error message and password prompt
 <div created="20200227111624282" modified="20200227111631615" title="$:/SiteTitle">
 <pre>My Notebook</pre>
 </div>
+<div created="20200227124615034" modified="20200227124616452" title="$:/state/sidebar">
+<pre>yes</pre>
+</div>
 <div created="20200227111900038" modified="20200227111922278" title="$:/state/tab--1963855381">
 <pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
@@ -10266,7 +10273,7 @@ Error message and password prompt
 <div created="20200227111902703" modified="20200227111902703" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20200227111736820" list="Home" modified="20200227111826952" title="$:/StoryList">
+<div created="20200227124606486" list="[[Coronavirus COVID-19 Global Cases]] Home" modified="20200227124606486" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11203,6 +11210,9 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 </div>
 <div created="20200227111937413" modified="20200227111937413" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fluid-fixed</pre>
+</div>
+<div created="20200228092653480" modified="20200228092729667" tags="" title="Coronavirus COVID-19 Global Cases">
+<pre>https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6</pre>
 </div>
 <div created="20200227111723954" modified="20200227111730813" tags="" title="Home">
 <pre></pre>
