--- a/wiki/index.html
+++ b/wiki/index.html
@@ -10273,7 +10273,7 @@ Error message and password prompt
 <div created="20200227111902703" modified="20200227111902703" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20200227124606486" list="[[Coronavirus COVID-19 Global Cases]] Home" modified="20200227124606486" title="$:/StoryList">
+<div created="20200228092815196" list="[[Coronavirus COVID-19 Global Cases]] Home" modified="20200228092815196" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11211,7 +11211,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200227111937413" modified="20200227111937413" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fluid-fixed</pre>
 </div>
-<div created="20200228092653480" modified="20200228092729667" tags="" title="Coronavirus COVID-19 Global Cases">
+<div created="20200228092653480" modified="20200228093215633" tags="corona" title="Coronavirus COVID-19 Global Cases">
 <pre>https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6</pre>
 </div>
 <div created="20200227111723954" modified="20200227111730813" tags="" title="Home">
