Saved by TiddlyWiki

--- a/vault/index.html
+++ b/vault/index.html
@@ -9620,8 +9620,8 @@ Error message and password prompt
 <div created="20200227104622643" modified="20200227104627266" title="$:/GitHub/Filename">
 <pre>index.html</pre>
 </div>
-<div created="20200227104616926" modified="20200227104619300" title="$:/GitHub/Path">
-<pre>/wiki/</pre>
+<div created="20200227104616926" modified="20200228095911999" title="$:/GitHub/Path">
+<pre>/vault/</pre>
 </div>
 <div created="20200227104604522" modified="20200227104612506" title="$:/GitHub/Repo">
 <pre>drleidig/tiddly</pre>
@@ -10258,8 +10258,8 @@ Error message and password prompt
 <div created="20200227104842323" modified="20200227111850418" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
 </div>
-<div created="20200227104113836" modified="20200227111857889" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Appearance</pre>
+<div created="20200227104113836" modified="20200228095906070" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
 <div created="20200227104118528" modified="20200227104756527" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -10273,7 +10273,7 @@ Error message and password prompt
 <div created="20200227111902703" modified="20200227111902703" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20200228092815196" list="[[Coronavirus COVID-19 Global Cases]] Home" modified="20200228092815196" title="$:/StoryList">
+<div created="20200228095904012" list="Home" modified="20200228095904012" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10289,7 +10289,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;https://drleidig.github.io/tiddly/wiki/&quot;
+            &quot;text&quot;: &quot;https://drleidig.github.io/tiddly/vault/index.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -10309,7 +10309,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/tiddly/wiki/&quot;
+            &quot;text&quot;: &quot;/tiddly/vault/index.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
