--- a/wiki/index.html
+++ b/wiki/index.html
@@ -399,6 +399,8 @@ Error message and password prompt
 
 <li>Home</li>
 
+<li>Test</li>
+
 </ul>
 </p>
 
@@ -10258,10 +10260,10 @@ Error message and password prompt
 <div created="20200227104842323" modified="20200227111850418" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
 </div>
-<div created="20200227104113836" modified="20200227111857889" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Appearance</pre>
+<div created="20200227104113836" modified="20200320092740611" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200227104118528" modified="20200227104756527" title="$:/state/tab-2065006209">
+<div created="20200227104118528" modified="20200320092742538" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20200227111108245" modified="20200227111718866" title="$:/state/tab/moresidebar-1850697562">
@@ -10273,7 +10275,7 @@ Error message and password prompt
 <div created="20200227111902703" modified="20200227111902703" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20200228092815196" list="[[Coronavirus COVID-19 Global Cases]] Home" modified="20200228092815196" title="$:/StoryList">
+<div created="20200320092738371" list="Test Home" modified="20200320092738371" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10289,7 +10291,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;https://drleidig.github.io/tiddly/wiki/&quot;
+            &quot;text&quot;: &quot;https://drleidig.github.io/tiddly/wiki/index.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -10309,7 +10311,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/tiddly/wiki/&quot;
+            &quot;text&quot;: &quot;/tiddly/wiki/index.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -10321,11 +10323,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;2560&quot;
+            &quot;text&quot;: &quot;1280&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1440&quot;
+            &quot;text&quot;: &quot;800&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -11216,6 +11218,9 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 </div>
 <div created="20200227111723954" modified="20200227111730813" tags="" title="Home">
 <pre></pre>
+</div>
+<div created="20200320092643317" modified="20200320092653062" tags="" title="Test">
+<pre>foobar</pre>
 </div>
 
 </div>
