Saved by TiddlyWiki

--- a/tw/index.html
+++ b/tw/index.html
@@ -10275,7 +10275,7 @@ Error message and password prompt
 <div created="20200227111902703" modified="20200227111902703" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20200320092857888" list="$:/ControlPanel Test Home" modified="20200320093336871" title="$:/StoryList">
+<div created="20200320092857888" list="Test Home" modified="20200320093336871" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11219,8 +11219,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200227111723954" modified="20200227111730813" tags="" title="Home">
 <pre></pre>
 </div>
-<div created="20200320092643317" modified="20200320092653062" tags="" title="Test">
-<pre>foobar</pre>
+<div created="20200320092643317" modified="20200320125746718" tags="" title="Test">
+<pre>foobar test</pre>
 </div>
 
 </div>
