--- a/tw/index.html
+++ b/tw/index.html
@@ -395,9 +395,13 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
 
+<li>20th March 2020</li>
+
 <li>Coronavirus COVID-19 Global Cases</li>
 
 <li>Home</li>
+
+<li>more tests</li>
 
 <li>Test</li>
 
@@ -10275,7 +10279,7 @@ Error message and password prompt
 <div created="20200227111902703" modified="20200227111902703" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20200320092857888" list="Test Home" modified="20200320093336871" title="$:/StoryList">
+<div created="20200320092857888" list="[[20th March 2020]] [[more tests]] Test Home" modified="20200320093336871" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11213,11 +11217,17 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200227111937413" modified="20200227111937413" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fluid-fixed</pre>
 </div>
+<div created="20200320125842461" modified="20200320125854248" tags="Journal" title="20th March 2020">
+<pre>Heute probieren wir was aus</pre>
+</div>
 <div created="20200228092653480" modified="20200228093215633" tags="corona" title="Coronavirus COVID-19 Global Cases">
 <pre>https://gisanddata.maps.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6</pre>
 </div>
 <div created="20200227111723954" modified="20200227111730813" tags="" title="Home">
 <pre></pre>
+</div>
+<div created="20200320125830015" modified="20200320125838441" tags="" title="more tests">
+<pre>here</pre>
 </div>
 <div created="20200320092643317" modified="20200320125746718" tags="" title="Test">
 <pre>foobar test</pre>
