--- a/tw/index.html
+++ b/tw/index.html
@@ -10281,7 +10281,7 @@ Error message and password prompt
 <div created="20200227111902703" modified="20200227111902703" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div list="jlslslslkjdf Home" title="$:/StoryList">
+<div created="20200320130627105" list="jlslslslkjdf Home" modified="20200320131025574" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10297,7 +10297,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;https://drleidig.github.io/tiddly/tw/index.html&quot;
+            &quot;text&quot;: &quot;https://drleidig.github.io/tiddly/tw/&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -10317,7 +10317,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/tiddly/tw/index.html&quot;
+            &quot;text&quot;: &quot;/tiddly/tw/&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -10329,15 +10329,15 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1280&quot;
+            &quot;text&quot;: &quot;375&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;800&quot;
+            &quot;text&quot;: &quot;667&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
-            &quot;text&quot;: &quot;en&quot;
+            &quot;text&quot;: &quot;de-DE&quot;
         }
     }
 }</pre>
@@ -11228,8 +11228,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200227111723954" modified="20200227111730813" tags="" title="Home">
 <pre></pre>
 </div>
-<div created="20200320130252553" modified="20200320130256867" tags="" title="jlslslslkjdf">
-<pre></pre>
+<div created="20200320130252553" modified="20200320130643520" tags="" title="jlslslslkjdf">
+<pre>Foobar test</pre>
 </div>
 <div created="20200320125830015" modified="20200320125838441" tags="" title="more tests">
 <pre>here</pre>
