--- a/tw/index.html
+++ b/tw/index.html
@@ -401,8 +401,6 @@ Error message and password prompt
 
 <li>Home</li>
 
-<li>jlslslslkjdf</li>
-
 <li>more tests</li>
 
 <li>Test</li>
@@ -10281,7 +10279,7 @@ Error message and password prompt
 <div created="20200227111902703" modified="20200227111902703" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20200320130627105" list="jlslslslkjdf Home" modified="20200320131025574" title="$:/StoryList">
+<div created="20200320130627105" list="Home" modified="20200320131025574" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11227,9 +11225,6 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 </div>
 <div created="20200227111723954" modified="20200227111730813" tags="" title="Home">
 <pre></pre>
-</div>
-<div created="20200320130252553" modified="20200320130643520" tags="" title="jlslslslkjdf">
-<pre>Foobar test</pre>
 </div>
 <div created="20200320125830015" modified="20200320125838441" tags="" title="more tests">
 <pre>here</pre>
