--- a/tw/index.html
+++ b/tw/index.html
@@ -161,6 +161,14 @@ Error message and password prompt
 
 <li>$:/GitHub/Username</li>
 
+<li>$:/GitLab/Filename</li>
+
+<li>$:/GitLab/Path</li>
+
+<li>$:/GitLab/Repo</li>
+
+<li>$:/GitLab/Username</li>
+
 <li>$:/Import</li>
 
 <li>$:/isEncrypted</li>
@@ -404,6 +412,8 @@ Error message and password prompt
 <li>more tests</li>
 
 <li>Test</li>
+
+<li>TW on Github?</li>
 
 </ul>
 </p>
@@ -9626,14 +9636,26 @@ Error message and password prompt
 <div created="20200227104622643" modified="20200227104627266" title="$:/GitHub/Filename">
 <pre>index.html</pre>
 </div>
-<div created="20200227104616926" modified="20200320125726553" title="$:/GitHub/Path">
-<pre>/tw</pre>
+<div created="20200227104616926" modified="20200320134150246" title="$:/GitHub/Path">
+<pre>/tw/</pre>
 </div>
 <div created="20200227104604522" modified="20200227104612506" title="$:/GitHub/Repo">
 <pre>drleidig/tiddly</pre>
 </div>
-<div created="20200227104129576" modified="20200227104131117" title="$:/GitHub/Username">
+<div created="20200227104129576" modified="20200320134048607" title="$:/GitHub/Username">
 <pre>drleidig</pre>
+</div>
+<div created="20200320132522579" modified="20200320132524152" title="$:/GitLab/Filename">
+<pre>index.html</pre>
+</div>
+<div created="20200320132518097" modified="20200320132750828" title="$:/GitLab/Path">
+<pre>/public/</pre>
+</div>
+<div created="20200320132503575" modified="20200320132507546" title="$:/GitLab/Repo">
+<pre>drleidig/tiddly</pre>
+</div>
+<div created="20200320132454674" modified="20200320134253931" title="$:/GitLab/Username">
+<pre></pre>
 </div>
 <div status="complete" title="$:/Import">
 <pre>The following tiddlers were imported:
@@ -10267,7 +10289,7 @@ Error message and password prompt
 <div created="20200227104113836" modified="20200320092740611" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200227104118528" modified="20200320125711743" title="$:/state/tab-2065006209">
+<div created="20200227104118528" modified="20200320134303665" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20200227111108245" modified="20200227111718866" title="$:/state/tab/moresidebar-1850697562">
@@ -10279,7 +10301,7 @@ Error message and password prompt
 <div created="20200227111902703" modified="20200227111902703" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20200320130627105" list="Home" modified="20200320131025574" title="$:/StoryList">
+<div created="20200320132444706" list="$:/ControlPanel [[TW on Github?]] Home" modified="20200320134300802" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10295,7 +10317,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;https://drleidig.github.io/tiddly/tw/&quot;
+            &quot;text&quot;: &quot;https://drleidig.github.io/tiddly/tw/index.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -10315,7 +10337,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/tiddly/tw/&quot;
+            &quot;text&quot;: &quot;/tiddly/tw/index.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -10327,15 +10349,15 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;375&quot;
+            &quot;text&quot;: &quot;1280&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;667&quot;
+            &quot;text&quot;: &quot;800&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
-            &quot;text&quot;: &quot;de-DE&quot;
+            &quot;text&quot;: &quot;en&quot;
         }
     }
 }</pre>
@@ -11231,6 +11253,12 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 </div>
 <div created="20200320092643317" modified="20200320125746718" tags="" title="Test">
 <pre>foobar test</pre>
+</div>
+<div created="20200320133639377" modified="20200320134318183" tags="" title="TW on Github?">
+<pre>testing ok?
+und jetzt?
+
+mein gott beisst sich mit gitlab</pre>
 </div>
 
 </div>
