Saved by TiddlyWiki

--- a/tw/index.html
+++ b/tw/index.html
@@ -10289,7 +10289,7 @@ Error message and password prompt
 <div created="20200227104113836" modified="20200320092740611" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200227104118528" modified="20200320134303665" title="$:/state/tab-2065006209">
+<div created="20200227104118528" modified="20200320134408920" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20200227111108245" modified="20200227111718866" title="$:/state/tab/moresidebar-1850697562">
@@ -10301,7 +10301,7 @@ Error message and password prompt
 <div created="20200227111902703" modified="20200227111902703" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20200320132444706" list="$:/ControlPanel [[TW on Github?]] Home" modified="20200320134300802" title="$:/StoryList">
+<div created="20200320134348958" list="[[TW on Github?]] Home" modified="20200320134402637" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10317,7 +10317,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;https://drleidig.github.io/tiddly/tw/index.html&quot;
+            &quot;text&quot;: &quot;https://drleidig.github.io/tiddly/tw/&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -10337,7 +10337,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/tiddly/tw/index.html&quot;
+            &quot;text&quot;: &quot;/tiddly/tw/&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -11254,11 +11254,14 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200320092643317" modified="20200320125746718" tags="" title="Test">
 <pre>foobar test</pre>
 </div>
-<div created="20200320133639377" modified="20200320134318183" tags="" title="TW on Github?">
+<div created="20200320133639377" modified="20200320134425881" tags="" title="TW on Github?">
 <pre>testing ok?
+
 und jetzt?
 
-mein gott beisst sich mit gitlab</pre>
+mein gott 
+
+beisst sich mit gitlab!</pre>
 </div>
 
 </div>
