Saved by TiddlyWiki

--- a/tw/index.html
+++ b/tw/index.html
@@ -161,6 +161,8 @@ Error message and password prompt
 
 <li>$:/GitHub/Username</li>
 
+<li>$:/GitLab/Branch</li>
+
 <li>$:/GitLab/Filename</li>
 
 <li>$:/GitLab/Path</li>
@@ -9645,14 +9647,17 @@ Error message and password prompt
 <div created="20200227104129576" modified="20200320134048607" title="$:/GitHub/Username">
 <pre>drleidig</pre>
 </div>
-<div created="20200320132522579" modified="20200320132524152" title="$:/GitLab/Filename">
-<pre>index.html</pre>
+<div created="20200320134522497" modified="20200320134523334" title="$:/GitLab/Branch">
+<pre></pre>
 </div>
-<div created="20200320132518097" modified="20200320132750828" title="$:/GitLab/Path">
-<pre>/public/</pre>
+<div created="20200320132522579" modified="20200320134528615" title="$:/GitLab/Filename">
+<pre></pre>
 </div>
-<div created="20200320132503575" modified="20200320132507546" title="$:/GitLab/Repo">
-<pre>drleidig/tiddly</pre>
+<div created="20200320132518097" modified="20200320134525977" title="$:/GitLab/Path">
+<pre></pre>
+</div>
+<div created="20200320132503575" modified="20200320134520903" title="$:/GitLab/Repo">
+<pre></pre>
 </div>
 <div created="20200320132454674" modified="20200320134253931" title="$:/GitLab/Username">
 <pre></pre>
@@ -10289,8 +10294,8 @@ Error message and password prompt
 <div created="20200227104113836" modified="20200320092740611" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200227104118528" modified="20200320134408920" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+<div created="20200227104118528" modified="20200320134516073" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/GitLab</pre>
 </div>
 <div created="20200227111108245" modified="20200227111718866" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
@@ -10301,7 +10306,7 @@ Error message and password prompt
 <div created="20200227111902703" modified="20200227111902703" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20200320134348958" list="[[TW on Github?]] Home" modified="20200320134402637" title="$:/StoryList">
+<div created="20200320134448873" list="[[TW on Github?]] Home" modified="20200320134510661" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11254,14 +11259,16 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200320092643317" modified="20200320125746718" tags="" title="Test">
 <pre>foobar test</pre>
 </div>
-<div created="20200320133639377" modified="20200320134425881" tags="" title="TW on Github?">
+<div created="20200320133639377" modified="20200320134731556" tags="" title="TW on Github?">
 <pre>testing ok?
-
 und jetzt?
 
-mein gott 
+mein gott
 
-beisst sich mit gitlab!</pre>
+beisst sich mit gitlab
+
+alles etwas unzuverlaessig
+</pre>
 </div>
 
 </div>
