--- a/tw/index.html
+++ b/tw/index.html
@@ -141,6 +141,8 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/AutoSave</li>
+
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/encryption</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home</li>
@@ -411,8 +413,6 @@ Error message and password prompt
 
 <li>Home</li>
 
-<li>more tests</li>
-
 <li>Test</li>
 
 <li>TW on Github?</li>
@@ -427,6 +427,9 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20200320134759431" modified="20200320134759431" title="$:/config/AutoSave">
+<pre>no</pre>
+</div>
 <div created="20200227111920333" modified="20200227111920333" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/encryption">
 <pre>show</pre>
 </div>
@@ -10294,8 +10297,8 @@ Error message and password prompt
 <div created="20200227104113836" modified="20200320092740611" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200227104118528" modified="20200320134516073" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/GitLab</pre>
+<div created="20200227104118528" modified="20200320134757698" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/General</pre>
 </div>
 <div created="20200227111108245" modified="20200227111718866" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
@@ -10306,7 +10309,7 @@ Error message and password prompt
 <div created="20200227111902703" modified="20200227111902703" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20200320134448873" list="[[TW on Github?]] Home" modified="20200320134510661" title="$:/StoryList">
+<div created="20200320134448873" list="Home" modified="20200320134852629" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11253,13 +11256,10 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200227111723954" modified="20200227111730813" tags="" title="Home">
 <pre></pre>
 </div>
-<div created="20200320125830015" modified="20200320125838441" tags="" title="more tests">
-<pre>here</pre>
-</div>
 <div created="20200320092643317" modified="20200320125746718" tags="" title="Test">
 <pre>foobar test</pre>
 </div>
-<div created="20200320133639377" modified="20200320134731556" tags="" title="TW on Github?">
+<div created="20200320133639377" modified="20200320134825425" tags="" title="TW on Github?">
 <pre>testing ok?
 und jetzt?
 
@@ -11268,6 +11268,8 @@ mein gott
 beisst sich mit gitlab
 
 alles etwas unzuverlaessig
+
+noch ein Test mit manuellem Save
 </pre>
 </div>
 
