Saved by TiddlyWiki

--- a/gtd5/index.html
+++ b/gtd5/index.html
@@ -163,6 +163,8 @@ Error message and password prompt
 
 <li>$:/state/tab-2065006209</li>
 
+<li>$:/state/tab/moresidebar-1850697562</li>
+
 <li>$:/state/tab/sidebar--595412856</li>
 
 <li>$:/StoryList</li>
@@ -172,6 +174,8 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
+
+<li>link to github</li>
 
 </ul>
 </p>
@@ -10005,10 +10009,13 @@ Error message and password prompt
 <div created="20200227110121724" modified="20200227110121724" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20200227110110024" modified="20200227110113500" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/More</pre>
+<div created="20200406120851245" modified="20200406120856680" title="$:/state/tab/moresidebar-1850697562">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20200227110455891" list="$:/ControlPanel Dashboard" modified="20200227110455891" title="$:/StoryList">
+<div created="20200227110110024" modified="20200406120910828" title="$:/state/tab/sidebar--595412856">
+<pre>$:/plugins/gsd5/core/ui/sidebar/collect-sidebar</pre>
+</div>
+<div created="20200406120838016" list="$:/ControlPanel Dashboard" modified="20200406120838016" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10024,19 +10031,19 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///Users/D029752/Library/Mobile%20Documents/iCloud~com~cjhunt~quine/Documents/empty%202020%20with%20gtd5.html&quot;
+            &quot;text&quot;: &quot;https://drleidig.github.io/tiddly/gtd5/&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;drleidig.github.io&quot;
         },
         &quot;$:/info/url/hostname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/hostname&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;drleidig.github.io&quot;
         },
         &quot;$:/info/url/protocol&quot;: {
             &quot;title&quot;: &quot;$:/info/url/protocol&quot;,
-            &quot;text&quot;: &quot;file:&quot;
+            &quot;text&quot;: &quot;https:&quot;
         },
         &quot;$:/info/url/port&quot;: {
             &quot;title&quot;: &quot;$:/info/url/port&quot;,
@@ -10044,7 +10051,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/Users/D029752/Library/Mobile%20Documents/iCloud~com~cjhunt~quine/Documents/empty%202020%20with%20gtd5.html&quot;
+            &quot;text&quot;: &quot;/tiddly/gtd5/&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -10052,15 +10059,15 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;file://&quot;
+            &quot;text&quot;: &quot;https://drleidig.github.io&quot;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;2560&quot;
+            &quot;text&quot;: &quot;1280&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1440&quot;
+            &quot;text&quot;: &quot;800&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -10177,6 +10184,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20200406120925176" gsd_complete="false" gsd_contact="" gsd_project="" gsd_realm="all" gsd_status="next" gsd_type="action" modified="20200406120925176" title="link to github">
+<pre></pre>
 </div>
 
 </div>
